<resources>
    <!-- App name -->
    <string name="app_name">MiniPollApp</string>

    <!-- Login -->
    <string name="login_activity_title">Connexion</string>
    <string name="login_btn">Se connecter</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_username">Nom d\'utilisateur</string>
    <string name="login_wrong_password_msg">Le mot de passe saisi est incorrect</string>

    <!-- Main / Main Menu -->
    <string name="menu">Menu</string>
    <string name="help_friends">Aider vos amis dans leurs choix</string>
    <string name="create">Créer</string>
    <string name="my_profile">Mon Profil</string>
    <string name="quiz">Questionnaire</string>
    <string name="my_friends">Mes amis</string>
    <string name="poll">Sondage</string>

    <!-- Friends List -->
    <string name="email">Adresse mail</string>
    <string name="name">Nom</string>
    <string name="identifier">Identifiant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Adapter Choose Friend -->
    <string name="text_view">TextView</string>

    <!-- Fragment Swipe -->
    <string name="login">Login</string>
    <string name="first_name">Prénom</string>
    <string name="email_address">Adresse Email</string>


    <string name="friends_list">Liste d\'amis</string>
    <string name="friends_management">Gestion des amis</string>
    <string name="add_friend">Ajouter un ami</string>
    <string name="choice_poll">Sondage pour un choix</string>
    <string name="create_poll">Créer un sondage</string>
    <string name="decision_poll">Sondage pour un accord</string>

</resources>
